# maxb

./: CMakeLists.txt  Makefile  README.md  maxb.cpp  maxb.sln  maxb.vcxproj.filters  targetver.h
maxb.xcodeproj/: project.pbxproj
src/: maxb.cpp  maxb.vcxproj  maxb.vcxproj.filters  platform.h  platform_linux.cpp  platform_macos.cpp  platform_win32.cpp  stdafx.cpp  stdafx.h  targetver.h
